[metadata]
name = rospy-util
version = 0.0.1
url = https://github.com/AHW214/rospy-util
author = Adam Weider
description = rospy utilities

[options]
python_requires = >= 3.8.5
setup_requires =
  setuptools
install_requires =
  rospy@https://github.com/rospypi/simple/raw/any/rospy/rospy-1.15.7.tar.gz
