[metadata]
name = rospy-util
version = 0.0.1
description = rospy utilities
url = https://github.com/AHW214/rospy-util
author = Adam Weider
license = MIT
license-files = LICENSE

[options]
python_requires = >= 3.8
include-package-data = True
packages = find:
package-dir =
  = src
setup_requires =
  setuptools
install_requires =
  geometry-msgs
  rospy
  tf
dependency_links =
  https://rospypi.github.io/simple/

[options.package_data]
rospy-util = py.typed

[options.packages.find]
where = src
